# kindertales-scraper

./: .gitignore  LICENSE  README.md  config.toml.example  pyproject.toml  tox.ini
.github/workflows/: release.yml  tests.yml
docs/: live-smoke-run.md
scripts/: check_release.py
src/kindertales_scraper/: __init__.py  archive.py  auth.py  center_setup.py  cli.py  config.py  credentials.py  discovery.py  metadata.py  names.py  progress.py  redaction.py  scheduler.py  sync.py  verify.py
tests/: __init__.py  test_archive.py  test_auth.py  test_center_setup.py  test_check_release.py  test_cli.py  test_config.py  test_credentials.py  test_discovery.py  test_metadata.py  test_names.py  test_progress.py  test_redaction.py  test_scheduler.py  test_sync.py  test_verify.py
tests/fixtures/: activities-page-1.json  children.json
